<!--
  ~  Copyright 2018 Jianfei Gao, Leonardo Teixeira, Bruno Ribeiro.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">StratuxLogger</string>
    <string name="stratux_wifi">Stratux Wifi:</string>
    <string name="not_detected">Not Detected</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="status_lbl">Status:</string>
    <string name="status_not_recording">Not Recording</string>
    <string name="status_recording">Recording</string>
    <string name="channel_name">Stratux Collector</string>
    <string name="channel_description">Stratux data collector</string>
    <string name="num_collected_lbl">Data Points:</string>
    <string name="lastReceived_lbl">Last received:</string>
</resources>
